Updated release notes from Google doc